# website_template

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
settings/: base.yaml  development.yaml  production.yaml
src/: lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/endpoints/: health.rs  index.rs  mod.rs  templates.rs
src/errors/: sqlite.rs
src/models/: mod.rs  mongo.rs  postgres.rs  redis.rs  sqlite.rs
src/models/r2d2_mongodb/: client_manager.rs  db_manager.rs  mod.rs
static/: schema.sql
static/css/: _index.scss  style.css  style.css.map  style.scss
static/js/: action_script.js
templates/: base.html  index.html
