[package]
name = "website_template"
version = "0.1.0"
edition = "2021"
authors = ["Christerpher Hunter <djhunter67@gmail.com>"]
documentation = "https://github.com/djhunter67/website_template"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "website_template"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "fat"  # LTO can produce better optimized code; 'false', 'fat', 'thin', or 'off'
codegen-units = 16  # Split crate into units to increase parallelism during compilation, may produce slower code; '1 - 256'
panic = "abort"
incremental = false  # Store cache data to disk in the 'target' dir for quicker recompilation
opt-level = 3
strip = "symbols"  # equivalent to strip = true
rpath = false  
debug-assertions = false
debug = false

[profile.dev]
overflow-checks = true
opt-level = 0
strip = "none"
codegen-units = 256
lto = "off"
panic = "unwind"
incremental = true
debug = false
debug-assertions = true

[profile.dev.build-override]
opt-level = 0
codegen-umits = 256
debug = false

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = "0.12.1"
config = { version = "0.15.7", features = ["yaml"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
r2d2_redis = "0.14.0"
r2d2_sqlite = { version = "0.26.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
mongodb = "3.2.0"
futures = "0.3.31"

[dev-dependencies]
rstest = "0.24.0"
tokio = { version = "1.44.2", features = ["full"] }
